# world-gen

./: .gitignore  CMakeLists.txt  README.md  default.toml
.agents/: AGENTS.md
.github/workflows/: ci.yaml  release.yaml
assets/fonts/: Inter-LICENSE.txt
shaders/2d/: terrain.frag  terrain.vert
shaders/3d/: terrain.frag  terrain.vert
shaders/compute/: accumulate_height.comp  gabor_noise.comp  perlin_3d.comp  perlin_noise.comp  simplex_noise.comp  value_noise.comp  wavelet_noise.comp  worley_noise.comp
shaders/include/: color.glsl  common.glsl  constants.glsl  hash.glsl  hybrid_coverage.glsl
shaders/loading/: planet.frag  planet.vert  quad.frag  quad.vert
shaders/local_clipmap/: terrain.frag  terrain.vert  wire.frag
shaders/planet/: terrain.frag  terrain.vert
shaders/text/: text.frag  text.vert
src/: main.cpp
src/apps/: app_settings.cpp  app_settings.hpp  app_settings.ui  generator_settings_dialog.cpp  generator_settings_dialog.hpp  generator_settings_dialog.ui  gui_helpers.hpp  planet_generator_settings_dialog.cpp  planet_generator_settings_dialog.hpp  planet_pipeline_list_model.cpp  planet_pipeline_list_model.hpp  save_terrain.cpp  save_terrain.hpp  save_terrain.ui  terrain_app.cpp  terrain_app.hpp  terrain_app_core.cpp  terrain_app_core.hpp  terrain_app_gui.cpp  terrain_app_gui.hpp  terrain_app_renderer.cpp  terrain_app_renderer.hpp  terrain_compute_method_ui.hpp  terrain_controls_widget.cpp  terrain_controls_widget.hpp  terrain_controls_widget.ui  terrain_pipeline_list_model.cpp  terrain_pipeline_list_model.hpp
src/apps/ui/: generator_settings_dialog.cpp  generator_settings_dialog.hpp  gui_helpers.hpp  planet_generator_settings_dialog.cpp  planet_generator_settings_dialog.hpp  planet_pipeline_list_model.cpp  terrain_compute_method_ui.cpp  terrain_controls_widget.cpp  terrain_controls_widget.hpp  terrain_controls_widget.ui  terrain_pipeline_list_model.cpp  terrain_pipeline_list_model.hpp
src/config/: app_config.cpp  app_config.hpp
src/device/: lve_compute_device.cpp  lve_compute_device.hpp  lve_device.cpp  lve_device.hpp
src/files/: csv_handler.cpp  csv_handler.hpp  exporter.cpp  exporter.hpp  file_path.cpp  file_path.hpp
src/game/camera/: camera_2d.cpp  camera_2d.hpp  camera_3d.cpp  camera_3d.hpp
src/game/input/: camera_controller_2d.cpp  camera_controller_2d.hpp  camera_controller_3d.cpp  camera_controller_3d.hpp  camera_controller_planet.cpp  camera_controller_planet.hpp  input_reader.hpp  input_state.hpp  input_system.cpp  input_system.hpp  planet_camera_depth.cpp  planet_camera_depth.hpp  planet_navigation.cpp  planet_navigation.hpp  qt_input_reader.cpp  qt_input_reader.hpp
src/game/objects/: game_object_2d.hpp  game_object_3d.hpp  game_object_text.hpp
src/game/ui/: dropdown_menu.cpp  dropdown_menu.hpp  ui_button.cpp  ui_button.hpp
src/model/buffer/: lve_buffer.cpp  lve_buffer.hpp
src/pipeline/: lve_pipeline.cpp  lve_pipeline.hpp
src/pipeline/descriptors/: lve_descriptors.cpp  lve_descriptors.hpp
src/renderer/: lve_frame_info.hpp  lve_renderer.cpp  lve_renderer.hpp
src/renderer/compute/: computer.cpp  computer.hpp  gpu_generator.cpp  gpu_generator.hpp  gpu_height_map.cpp  gpu_height_map.hpp  gpu_height_map_accumulator.cpp  gpu_height_map_accumulator.hpp  gpu_planet_generator.cpp  gpu_planet_generator.hpp  gpu_planet_pipeline.cpp  gpu_planet_pipeline.hpp  gpu_terrain_pipeline.cpp  gpu_terrain_pipeline.hpp  value_noise_compute.cpp  value_noise_compute.hpp
src/renderer/objects/: local_clipmap_render_resources.cpp  local_clipmap_render_resources.hpp  mesh_2d.cpp  mesh_2d.hpp  mesh_3d.cpp  mesh_3d.hpp  text_mesh.cpp  text_mesh.hpp
src/renderer/systems/: loading_overlay_system.cpp  loading_overlay_system.hpp  render_system_2d.cpp  render_system_2d.hpp  render_system_3d.cpp  render_system_3d.hpp  render_system_local_clipmap.cpp  render_system_local_clipmap.hpp  render_system_planet.cpp  render_system_planet.hpp  terrain_render_system.cpp  terrain_render_system.hpp  text_render_system.cpp  text_render_system.hpp
src/scripts/: intepreter.cpp  interpreter.hpp
src/stb/: font_atlas.hpp  stb_truetype_impl.cpp
src/swap_chain/: lve_swap_chain.cpp  lve_swap_chain.hpp
src/terrain/: planet.hpp  terrain.cpp  terrain.hpp  terrain_compute_method.hpp  terrain_detail.cpp  terrain_detail.hpp  terrain_height.hpp
src/terrain/generators/: coordinate_scaled_generator.cpp  coordinate_scaled_generator.hpp  generator.cpp  generator.hpp  generator_compute_capabilities.cpp  generator_compute_capabilities.hpp  generator_factory.cpp  generator_factory.hpp  generator_spec.hpp  generators.hpp  terrain_pipeline.cpp  terrain_pipeline.hpp
src/terrain/planet/: cube_sphere.cpp  cube_sphere.hpp  local_clipmap_controller.cpp  local_clipmap_controller.hpp  local_clipmap_mesh.cpp  local_clipmap_mesh.hpp  local_clipmap_presentation.cpp  local_clipmap_presentation.hpp  local_clipmap_residency.cpp  local_clipmap_residency.hpp  local_clipmap_sampling.cpp  local_clipmap_sampling.hpp  local_clipmap_topology.cpp  local_planet_frame.cpp  (+15 more)
src/utils/: color_map.cpp  color_map.hpp  frame_limiter.cpp  frame_limiter.hpp  thread_pool.cpp  thread_pool.hpp
src/window/: glfw_window_backend.cpp  glfw_window_backend.hpp  lve_window.cpp  lve_window.hpp  qt_window_backend.cpp  qt_window_backend.hpp  window_surface.hpp
tests/: app_config_tests.cpp  exporter_tests.cpp  gpu_terrain_generation_tests.cpp  hash_uniform_real_distribution_tests.cpp  heightmap_tests.cpp  helpers.cpp  helpers.hpp  interpreter_tests.cpp  local_clipmap_controller_tests.cpp  local_clipmap_mesh_tests.cpp  local_clipmap_presentation_tests.cpp  local_clipmap_residency_tests.cpp  local_clipmap_sampling_tests.cpp  local_clipmap_topology_tests.cpp  perlin_tests.cpp  planet_location_tests.cpp  planet_lod_coordinator_tests.cpp  planet_lod_selector_tests.cpp  planet_navigation_tests.cpp  planet_patch_batch_tests.cpp  planet_patch_mesh_tests.cpp  planet_patch_tests.cpp  terrain_detail_tests.cpp  terrain_field_tests.cpp  terrain_pipeline_3d_tests.cpp  terrain_pipeline_octaves_tests.cpp  terrain_pipeline_tests.cpp
(+73 files in other folders)
